tajo-core-tests/src/test/resources/results/TestSQLAnalyzer/errors/in_subquery_1.result
ERROR: syntax error at or near "1"
LINE 6:   select xxx 1from inner_table
                     ^